// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formatExpandablePolicies should correctly add expandable data for table 1`] = `
Array [
  Object {
    "__typename": "Compliance",
    "clusterCompliant": "0/2/0",
    "clusterConsoleURL": Object {
      "local-cluster": "https://console-openshift-console.apps.mycluster-hub.dev08.red-chesterfield.com",
      "managed01": "https://console-openshift-console.apps.mycluster-managed01.dev08.red-chesterfield.com",
    },
    "clusterNS": Object {
      "local-cluster": "local-cluster",
      "managed01": "managed01",
    },
    "metadata": Object {
      "__typename": "Metadata",
      "annotations": Object {
        "policy.open-cluster-management.io/categories": "PR.PT Protective Technology, PR.IP Information Protection Processes and Procedures, PR.DS Data Security",
        "policy.open-cluster-management.io/controls": "PR.PT-3 Least Functionality, PR.IP-1 Baseline Configuration, PR.DS-2 Data-in-transit",
        "policy.open-cluster-management.io/standards": "NIST-CSF",
      },
      "name": "my-policy-test",
      "namespace": "e2e-rbac-test-1",
      "resourceVersion": "13096493",
      "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/e2e-rbac-test-1/policies/my-policy-test",
    },
    "name": "my-policy-test",
    "namespace": "e2e-rbac-test-1",
    "placementBindings": Array [
      Object {
        "__typename": "PlacementBinding",
        "metadata": Object {
          "__typename": "Metadata",
          "name": "binding-my-policy-test",
          "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/e2e-rbac-test-1/placementbindings/binding-my-policy-test",
        },
      },
    ],
    "placementPolicies": Array [
      Object {
        "__typename": "PlacementPolicy",
        "metadata": Object {
          "__typename": "Metadata",
          "name": "placement-my-policy-test",
          "selfLink": "/apis/apps.open-cluster-management.io/v1/namespaces/e2e-rbac-test-1/placementrules/placement-my-policy-test",
        },
      },
    ],
    "policyCompliant": "0/0",
    "raw": Object {
      "apiVersion": "policy.open-cluster-management.io/v1",
      "kind": "Policy",
      "metadata": Object {
        "annotations": Object {
          "policy.open-cluster-management.io/categories": "PR.PT Protective Technology, PR.IP Information Protection Processes and Procedures, PR.DS Data Security",
          "policy.open-cluster-management.io/controls": "PR.PT-3 Least Functionality, PR.IP-1 Baseline Configuration, PR.DS-2 Data-in-transit",
          "policy.open-cluster-management.io/standards": "NIST-CSF",
        },
        "creationTimestamp": "2020-10-20T21:38:16Z",
        "generation": 1,
        "managedFields": Array [
          Object {
            "apiVersion": "policy.open-cluster-management.io/v1",
            "fieldsType": "FieldsV1",
            "fieldsV1": Object {
              "f:metadata": Object {
                "f:annotations": Object {
                  ".": Object {},
                  "f:policy.open-cluster-management.io/categories": Object {},
                  "f:policy.open-cluster-management.io/controls": Object {},
                  "f:policy.open-cluster-management.io/standards": Object {},
                },
              },
              "f:spec": Object {
                ".": Object {},
                "f:disabled": Object {},
                "f:policy-templates": Object {},
                "f:remediationAction": Object {},
              },
            },
            "manager": "unknown",
            "operation": "Update",
            "time": "2020-10-20T21:38:16Z",
          },
          Object {
            "apiVersion": "policy.open-cluster-management.io/v1",
            "fieldsType": "FieldsV1",
            "fieldsV1": Object {
              "f:status": Object {
                ".": Object {},
                "f:placement": Object {},
                "f:status": Object {},
              },
            },
            "manager": "governance-policy-propagator",
            "operation": "Update",
            "time": "2020-10-20T21:38:50Z",
          },
        ],
        "name": "my-policy-test",
        "namespace": "e2e-rbac-test-1",
        "resourceVersion": "13096493",
        "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/e2e-rbac-test-1/policies/my-policy-test",
        "uid": "2ef56c99-355a-4162-bc7c-9ce07677b400",
      },
      "spec": Object {
        "disabled": false,
        "policy-templates": Array [
          Object {
            "objectDefinition": Object {
              "apiVersion": "policy.open-cluster-management.io/v1",
              "kind": "ConfigurationPolicy",
              "metadata": Object {
                "name": "my-policy-test-sample-nginx-pod",
              },
              "spec": Object {
                "namespaceSelector": Object {
                  "exclude": Array [
                    "kube-*",
                  ],
                  "include": Array [
                    "default",
                  ],
                },
                "object-templates": Array [
                  Object {
                    "complianceType": "musthave",
                    "objectDefinition": Object {
                      "apiVersion": "v1",
                      "kind": "Pod",
                      "metadata": Object {
                        "name": "sample-nginx-pod",
                      },
                      "spec": Object {
                        "containers": Array [
                          Object {
                            "image": "nginx:1.7.9",
                            "name": "nginx",
                            "ports": Array [
                              Object {
                                "containerPort": 80,
                              },
                            ],
                          },
                        ],
                      },
                    },
                  },
                ],
                "remediationAction": "inform",
                "severity": "low",
              },
            },
          },
          Object {
            "objectDefinition": Object {
              "apiVersion": "policy.open-cluster-management.io/v1",
              "kind": "CertificatePolicy",
              "metadata": Object {
                "name": "my-policy-test-example",
              },
              "spec": Object {
                "minimumDuration": "300h",
                "namespaceSelector": Object {
                  "exclude": Array [
                    "kube-*",
                  ],
                  "include": Array [
                    "default",
                  ],
                },
                "remediationAction": "inform",
                "severity": "low",
              },
            },
          },
        ],
        "remediationAction": "enforce",
      },
      "status": Object {
        "placement": Array [
          Object {
            "placementBinding": "binding-my-policy-test",
            "placementRule": "placement-my-policy-test",
          },
        ],
        "status": Array [
          Object {
            "clustername": "local-cluster",
            "clusternamespace": "local-cluster",
            "compliant": "Compliant",
          },
          Object {
            "clustername": "managed01",
            "clusternamespace": "managed01",
            "compliant": "Compliant",
          },
        ],
      },
    },
    "remediation": "enforce",
    "subItems": Array [
      Object {
        "items": Array [
          "binding-my-policy-test",
        ],
        "name": "policy.pb",
      },
      Object {
        "items": Array [
          "placement-my-policy-test",
        ],
        "name": "policy.pp",
      },
    ],
  },
  Object {
    "__typename": "Compliance",
    "clusterCompliant": "0/1/0",
    "clusterConsoleURL": Object {
      "local-cluster": "https://console-openshift-console.apps.mycluster-hub.dev08.red-chesterfield.com",
      "managed01": "https://console-openshift-console.apps.mycluster-managed01.dev08.red-chesterfield.com",
    },
    "clusterNS": Object {
      "local-cluster": "local-cluster",
      "managed01": "managed01",
    },
    "metadata": Object {
      "__typename": "Metadata",
      "annotations": Object {
        "policy.open-cluster-management.io/categories": "PR.PT Protective Technology",
        "policy.open-cluster-management.io/controls": "PR.PT-3 Least Functionality",
        "policy.open-cluster-management.io/standards": "NIST-CSF",
      },
      "name": "my-test-policy-pod",
      "namespace": "e2e-rbac-test-1",
      "resourceVersion": "13096967",
      "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/e2e-rbac-test-1/policies/my-test-policy-pod",
    },
    "name": "my-test-policy-pod",
    "namespace": "e2e-rbac-test-1",
    "placementBindings": Array [
      Object {
        "__typename": "PlacementBinding",
        "metadata": Object {
          "__typename": "Metadata",
          "name": "binding-my-test-policy-pod",
          "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/e2e-rbac-test-1/placementbindings/binding-my-test-policy-pod",
        },
      },
    ],
    "placementPolicies": Array [
      Object {
        "__typename": "PlacementPolicy",
        "metadata": Object {
          "__typename": "Metadata",
          "name": "placement-my-test-policy-pod",
          "selfLink": "/apis/apps.open-cluster-management.io/v1/namespaces/e2e-rbac-test-1/placementrules/placement-my-test-policy-pod",
        },
      },
    ],
    "policyCompliant": "0/0",
    "raw": Object {
      "apiVersion": "policy.open-cluster-management.io/v1",
      "kind": "Policy",
      "metadata": Object {
        "annotations": Object {
          "policy.open-cluster-management.io/categories": "PR.PT Protective Technology",
          "policy.open-cluster-management.io/controls": "PR.PT-3 Least Functionality",
          "policy.open-cluster-management.io/standards": "NIST-CSF",
        },
        "creationTimestamp": "2020-10-20T21:39:11Z",
        "generation": 1,
        "managedFields": Array [
          Object {
            "apiVersion": "policy.open-cluster-management.io/v1",
            "fieldsType": "FieldsV1",
            "fieldsV1": Object {
              "f:metadata": Object {
                "f:annotations": Object {
                  ".": Object {},
                  "f:policy.open-cluster-management.io/categories": Object {},
                  "f:policy.open-cluster-management.io/controls": Object {},
                  "f:policy.open-cluster-management.io/standards": Object {},
                },
              },
              "f:spec": Object {
                ".": Object {},
                "f:disabled": Object {},
                "f:policy-templates": Object {},
                "f:remediationAction": Object {},
              },
            },
            "manager": "unknown",
            "operation": "Update",
            "time": "2020-10-20T21:39:11Z",
          },
          Object {
            "apiVersion": "policy.open-cluster-management.io/v1",
            "fieldsType": "FieldsV1",
            "fieldsV1": Object {
              "f:status": Object {
                ".": Object {},
                "f:placement": Object {},
                "f:status": Object {},
              },
            },
            "manager": "governance-policy-propagator",
            "operation": "Update",
            "time": "2020-10-20T21:39:28Z",
          },
        ],
        "name": "my-test-policy-pod",
        "namespace": "e2e-rbac-test-1",
        "resourceVersion": "13096967",
        "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/e2e-rbac-test-1/policies/my-test-policy-pod",
        "uid": "d2e23078-5701-4df1-9d58-56a8f6b40777",
      },
      "spec": Object {
        "disabled": false,
        "policy-templates": Array [
          Object {
            "objectDefinition": Object {
              "apiVersion": "policy.open-cluster-management.io/v1",
              "kind": "ConfigurationPolicy",
              "metadata": Object {
                "name": "my-test-policy-pod-sample-nginx-pod",
              },
              "spec": Object {
                "namespaceSelector": Object {
                  "exclude": Array [
                    "kube-*",
                  ],
                  "include": Array [
                    "default",
                  ],
                },
                "object-templates": Array [
                  Object {
                    "complianceType": "musthave",
                    "objectDefinition": Object {
                      "apiVersion": "v1",
                      "kind": "Pod",
                      "metadata": Object {
                        "name": "sample-nginx-pod",
                      },
                      "spec": Object {
                        "containers": Array [
                          Object {
                            "image": "nginx:1.7.9",
                            "name": "nginx",
                            "ports": Array [
                              Object {
                                "containerPort": 80,
                              },
                            ],
                          },
                        ],
                      },
                    },
                  },
                ],
                "remediationAction": "inform",
                "severity": "low",
              },
            },
          },
        ],
        "remediationAction": "inform",
      },
      "status": Object {
        "placement": Array [
          Object {
            "placementBinding": "binding-my-test-policy-pod",
            "placementRule": "placement-my-test-policy-pod",
          },
        ],
        "status": Array [
          Object {
            "clustername": "managed01",
            "clusternamespace": "managed01",
            "compliant": "Compliant",
          },
        ],
      },
    },
    "remediation": "inform",
    "subItems": Array [
      Object {
        "items": Array [
          "binding-my-test-policy-pod",
        ],
        "name": "policy.pb",
      },
      Object {
        "items": Array [
          "placement-my-test-policy-pod",
        ],
        "name": "policy.pp",
      },
    ],
  },
  Object {
    "__typename": "Compliance",
    "clusterCompliant": "0/2/0",
    "clusterConsoleURL": Object {
      "local-cluster": "https://console-openshift-console.apps.mycluster-hub.dev08.red-chesterfield.com",
      "managed01": "https://console-openshift-console.apps.mycluster-managed01.dev08.red-chesterfield.com",
    },
    "clusterNS": Object {
      "local-cluster": "local-cluster",
      "managed01": "managed01",
    },
    "metadata": Object {
      "__typename": "Metadata",
      "annotations": Object {
        "policy.open-cluster-management.io/categories": "PR.DS Data Security",
        "policy.open-cluster-management.io/controls": "PR.DS-2 Data-in-transit",
        "policy.open-cluster-management.io/standards": "NIST-CSF",
      },
      "name": "my-test-policy-cert",
      "namespace": "e2e-rbac-test-1",
      "resourceVersion": "13097316",
      "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/e2e-rbac-test-1/policies/my-test-policy-cert",
    },
    "name": "my-test-policy-cert",
    "namespace": "e2e-rbac-test-1",
    "placementBindings": Array [
      Object {
        "__typename": "PlacementBinding",
        "metadata": Object {
          "__typename": "Metadata",
          "name": "binding-my-test-policy-cert",
          "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/e2e-rbac-test-1/placementbindings/binding-my-test-policy-cert",
        },
      },
    ],
    "placementPolicies": Array [
      Object {
        "__typename": "PlacementPolicy",
        "metadata": Object {
          "__typename": "Metadata",
          "name": "placement-my-test-policy-cert",
          "selfLink": "/apis/apps.open-cluster-management.io/v1/namespaces/e2e-rbac-test-1/placementrules/placement-my-test-policy-cert",
        },
      },
    ],
    "policyCompliant": "0/0",
    "raw": Object {
      "apiVersion": "policy.open-cluster-management.io/v1",
      "kind": "Policy",
      "metadata": Object {
        "annotations": Object {
          "policy.open-cluster-management.io/categories": "PR.DS Data Security",
          "policy.open-cluster-management.io/controls": "PR.DS-2 Data-in-transit",
          "policy.open-cluster-management.io/standards": "NIST-CSF",
        },
        "creationTimestamp": "2020-10-20T21:39:41Z",
        "generation": 1,
        "managedFields": Array [
          Object {
            "apiVersion": "policy.open-cluster-management.io/v1",
            "fieldsType": "FieldsV1",
            "fieldsV1": Object {
              "f:metadata": Object {
                "f:annotations": Object {
                  ".": Object {},
                  "f:policy.open-cluster-management.io/categories": Object {},
                  "f:policy.open-cluster-management.io/controls": Object {},
                  "f:policy.open-cluster-management.io/standards": Object {},
                },
              },
              "f:spec": Object {
                ".": Object {},
                "f:disabled": Object {},
                "f:policy-templates": Object {},
                "f:remediationAction": Object {},
              },
            },
            "manager": "unknown",
            "operation": "Update",
            "time": "2020-10-20T21:39:41Z",
          },
          Object {
            "apiVersion": "policy.open-cluster-management.io/v1",
            "fieldsType": "FieldsV1",
            "fieldsV1": Object {
              "f:status": Object {
                ".": Object {},
                "f:placement": Object {},
                "f:status": Object {},
              },
            },
            "manager": "governance-policy-propagator",
            "operation": "Update",
            "time": "2020-10-20T21:39:50Z",
          },
        ],
        "name": "my-test-policy-cert",
        "namespace": "e2e-rbac-test-1",
        "resourceVersion": "13097316",
        "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/e2e-rbac-test-1/policies/my-test-policy-cert",
        "uid": "300dfae4-0977-4339-857d-91e48452a5e6",
      },
      "spec": Object {
        "disabled": false,
        "policy-templates": Array [
          Object {
            "objectDefinition": Object {
              "apiVersion": "policy.open-cluster-management.io/v1",
              "kind": "CertificatePolicy",
              "metadata": Object {
                "name": "my-test-policy-cert-example",
              },
              "spec": Object {
                "minimumDuration": "300h",
                "namespaceSelector": Object {
                  "exclude": Array [
                    "kube-*",
                  ],
                  "include": Array [
                    "default",
                  ],
                },
                "remediationAction": "inform",
                "severity": "low",
              },
            },
          },
        ],
        "remediationAction": "enforce",
      },
      "status": Object {
        "placement": Array [
          Object {
            "placementBinding": "binding-my-test-policy-cert",
            "placementRule": "placement-my-test-policy-cert",
          },
        ],
        "status": Array [
          Object {
            "clustername": "local-cluster",
            "clusternamespace": "local-cluster",
            "compliant": "Compliant",
          },
          Object {
            "clustername": "managed01",
            "clusternamespace": "managed01",
            "compliant": "Compliant",
          },
        ],
      },
    },
    "remediation": "enforce",
    "subItems": Array [
      Object {
        "items": Array [
          "binding-my-test-policy-cert",
        ],
        "name": "policy.pb",
      },
      Object {
        "items": Array [
          "placement-my-test-policy-cert",
        ],
        "name": "policy.pp",
      },
    ],
  },
]
`;

exports[`formatPoliciesToClustersTableData should correctly format 1`] = `
Array [
  Object {
    "cluster": "local-cluster",
    "consoleURL": "https://console-openshift-console.apps.mycluster-hub.dev08.red-chesterfield.com",
    "namespace": "local-cluster",
    "nonCompliant": Array [],
    "violation": "0/2/0",
  },
  Object {
    "cluster": "managed01",
    "consoleURL": "https://console-openshift-console.apps.mycluster-managed01.dev08.red-chesterfield.com",
    "namespace": "managed01",
    "nonCompliant": Array [],
    "violation": "0/3/0",
  },
]
`;

exports[`formatPoliciesToClustersTableData should correctly format 2`] = `
Array [
  Object {
    "cluster": "local-cluster",
    "consoleURL": "https://console-openshift-console.apps.mycluster-hub.dev08.red-chesterfield.com",
    "namespace": "local-cluster",
    "nonCompliant": Array [],
    "violation": "0/1/0",
  },
  Object {
    "cluster": "managed01",
    "consoleURL": "https://console-openshift-console.apps.mycluster-managed01.dev08.red-chesterfield.com",
    "namespace": "managed01",
    "nonCompliant": Array [],
    "violation": "0/1/0",
  },
]
`;

exports[`formatPoliciesToClustersTableData should correctly format 3`] = `
Array [
  Object {
    "cluster": "local-cluster",
    "consoleURL": "https://console-openshift-console.apps.mycluster-hub.dev08.red-chesterfield.com",
    "namespace": "local-cluster",
    "nonCompliant": Array [
      "my-test-policy-imagemanifestvulnpolicy",
      "my-test-policy-iampolicy",
    ],
    "violation": "1/2/1",
  },
  Object {
    "cluster": "managed01",
    "consoleURL": "https://console-openshift-console.apps.mycluster-managed01.dev08.red-chesterfield.com",
    "namespace": "managed01",
    "nonCompliant": Array [
      "my-test-policy-imagemanifestvulnpolicy",
    ],
    "violation": "1/1/0",
  },
]
`;
